java/products-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  selector:
    matchLabels:
      app: product-service
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: octopussamples/octopub-products:0.1.274
          ports:
            - name: web
              containerPort: 8083
          resources:
            limits:
              memory: 1024Mi
              cpu: 500m
            requests:
              memory: 512Mi
              cpu: 250m
